--- a/AI visualization/hmm-react-app/firebase.json
+++ b/AI visualization/hmm-react-app/firebase.json
@@ -1,15 +1,10 @@
 {
   "hosting": {
-    "public": "./",
+    "public": "build",
     "ignore": [
       "firebase.json",
+      "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "./public/index.html"
-      }
     ]
   }
 }
